This file contains a summary of changes made and why.
2020Jun22 Removed bug in frinp.f introduced on 2018OCT?. Changed documented in source code but not below. 
2020Jun17 lstsu.f. Initilize itime_start,itime_stop,itime_start_p,itime_stop_p
2020Jun16 ../skdrut/gnpas.f Got rid of a bunch of stuff dealing with headstacks.
          drudg/*.f and ../skdrut/*.f.  Added implicit none to all routines EXCEPT xat.f
          Fixed some variables that were not defined
2020Jun08 Removed broadband stuff from ../skdrincl/statn.ftni and put in ../skdrincl/broadband.
2020Jun08 Added station dependent parameter ibb_off for extra time in writing: 
          skrdrini.f, sanp.f, read_broadband_section.f. Also initialize to 0 broadband stuff in skdrini.f
2020May29 snap.f. Fixed bug where if a station had early start then there would be no PREOB. 
2020Feb20 proc_dbbc_bbc.f, proc_lba_ifp.f, proc_mracks_vc.f proc_vracks_bbc.f,proc_vc_cmd.f. Added implicit none.
          Also added luscn to routines invalid_if
2019Nov20 Several changes to replace f90 code by f77 code(by Ed Himwich):
          skdrini.f, snap.f, ../skdrut/vmoinp.f, vobinp.f, frinp.f, iwhere_in_string_list_nocase.f
2019Nov20 Bug fixes in snap.f and in sdrini.f.  Indices of arrays used wrong variables, eg. foo(ic) should be foo(i)
2019Sep23 proc_disk_tracks.f: If recorder=none do not round up channels recorded to power of 2. 
2019Aug15-Sep23.  Many changes merging VGOS and S/X branch together. Some bug fixes. About 20 files changed. 
2018Nov13 proc_disk_tracks.f: Removed checking of BW/samplerate. This will now be handled by the FS. 
2018Sep25 Makefile, drudg_rdctl.f: Location of skedf.ctl varies depending on whether computer is PC-FS or not. 
2018Sep11
   proc_disk_tracks.f: Comments modified based on email from WEH 2018Sep06. Also if fila10g, use 64 bit mask for Mark5C.  
   proc_dbbc_pfb_tracks.f: Fixed an error in writing out a mask. 