@@ -1,6 +1,6 @@
 !Include file to set the version. Just change this and leave fdrudg.f alone. (you need to delete fdrudg.o prior to make though.) 
 ! below is set at compiletime
-      cversion = '2020Jun22'
+      cversion = '2020Jun30'
 !
 ! See change_log.txt for a summary of the changes.
 !  
